--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,113 @@
 /* You can delete / re-write this img class  */
 
+:root {
+    --coral: #F05D5E;
+    --green: #5d9e6e;    
+    --light: #E7ECEF;
+    --lightYellow: #eaf11d;
+    --highYellow: #b7bc26;
+    --dark: #272932;
+    --darkGray: #53586c;
+    --camel: #D8A47F;    
+}
+
 img {
     max-width: 200px;
 }
 
+.page{
+   padding: 5px;
+   
+}
+
+.page--h1 {
+    color: var(--coral);
+    text-shadow: 1px 1px black;
+    text-align: center;
+    border-top: 2px solid var(--light);    
+    border-bottom: 2px solid var(--dark);
+    background: linear-gradient(to left,  var(--light), var(--dark));
+}
+
+.page--main {
+    display: flex;
+}
+
+.page--portion {
+    align-items: center;    
+    width: 50vw;
+    margin: 5px;
+    padding: 5px;
+}
+
+.page--card {
+    min-width: 200px;
+    width: 10vw;
+    min-height: 250px;
+    height: calc(w*1.25);
+    margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6px;
+    padding: 2px;
+    border: 2px solid;
+    box-shadow: 2px 2px 0 0;   
+}
+
+.page--card img{
+    padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;   
+}
+
+.page--card .line1, .line2{
+    padding: 0;
+    margin: 0;    
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.page--card .line3, .line4{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.dark {
+    background-color: var(--darkGray);
+    border-color: 2px solid black;
+    font-family: "Rubik Glitch", sans-serif;     
+}
+
+.dark--h2 {
+    color: var(--dark);
+    padding: 5px;
+    text-shadow: 1px 1px white;
+    text-align: center;
+    border-top: 2px solid var(--dark);    
+    border-bottom: 2px solid var(--dark);
+    background: linear-gradient(to left, var(--dark),  var(--darkGray));
+
+}
+
+.force {
+    background-color: var(--lightYellow) ;    
+    border-color: 2px solid white;
+    font-family: "Paytone One", sans-serif;     
+}
+
+.force--h2 {
+    color: var(--light);
+    padding: 5px;
+    text-shadow: 2px 2px black;
+    text-align: center;
+    border-top: 2px solid var(--light);    
+    border-bottom: 2px solid var(--light);
+    background: linear-gradient(to left,  var(--lightYellow),  var(--highYellow) 50%, var(--light));    
+
+}
 /* Happy coding! */
